// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DocumentSettings should render correctly 1`] = `
<div>
  <div>
    Dummy Modal
    <p>
      title: 
      Document Settings
    </p>
    <div>
      Dummy Form
      <div>
        DummyEngraveDpiSlider
        <p>
          value: 
          medium
        </p>
        <button
          type="button"
        >
          change dpi
        </button>
      </div>
      <div>
        Dummy FormItem
        <p>
          name: 
          workarea
        </p>
        <div>
          Dummy Select
          <button
            type="button"
          >
            change workarea
          </button>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fbm1
            </p>
            beamo
          </div>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fbb1b
            </p>
            Beambox
          </div>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fbb1p
            </p>
            Beambox Pro
          </div>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fhexa1
            </p>
            HEXA
          </div>
        </div>
      </div>
      <strong>
        Add-ons
      </strong>
      <div
        class="row"
      >
        <div>
          Dummy Col
          <p>
            props: 
            {"span":12}
          </p>
          <div>
            Dummy FormItem
            <p>
              name: 
              rotary_mode
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                undefined
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
          <div>
            Dummy FormItem
            <p>
              name: 
              borderless_mode
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                true
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
        </div>
        <div>
          Dummy Col
          <p>
            props: 
            {"span":12}
          </p>
          <div>
            Dummy FormItem
            <p>
              name: 
              autofocus-module
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                true
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
          <div>
            Dummy FormItem
            <p>
              name: 
              diode_module
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                true
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      type="button"
    >
      Save
    </button>
    <button
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`test DocumentSettings should render correctly 2`] = `
<div>
  <div>
    Dummy Modal
    <p>
      title: 
      Document Settings
    </p>
    <div>
      Dummy Form
      <div>
        DummyEngraveDpiSlider
        <p>
          value: 
          high
        </p>
        <button
          type="button"
        >
          change dpi
        </button>
      </div>
      <div>
        Dummy FormItem
        <p>
          name: 
          workarea
        </p>
        <div>
          Dummy Select
          <button
            type="button"
          >
            change workarea
          </button>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fbm1
            </p>
            beamo
          </div>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fbb1b
            </p>
            Beambox
          </div>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fbb1p
            </p>
            Beambox Pro
          </div>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fhexa1
            </p>
            HEXA
          </div>
        </div>
      </div>
      <strong>
        Add-ons
      </strong>
      <div
        class="row"
      >
        <div>
          Dummy Col
          <p>
            props: 
            {"span":12}
          </p>
          <div>
            Dummy FormItem
            <p>
              name: 
              rotary_mode
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                undefined
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
          <div>
            Dummy FormItem
            <p>
              name: 
              borderless_mode
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                true
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
        </div>
        <div>
          Dummy Col
          <p>
            props: 
            {"span":12}
          </p>
          <div>
            Dummy FormItem
            <p>
              name: 
              autofocus-module
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                true
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
          <div>
            Dummy FormItem
            <p>
              name: 
              diode_module
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                true
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      type="button"
    >
      Save
    </button>
    <button
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`test DocumentSettings should render correctly 3`] = `
<div>
  <div>
    Dummy Modal
    <p>
      title: 
      Document Settings
    </p>
    <div>
      Dummy Form
      <div>
        DummyEngraveDpiSlider
        <p>
          value: 
          high
        </p>
        <button
          type="button"
        >
          change dpi
        </button>
      </div>
      <div>
        Dummy FormItem
        <p>
          name: 
          workarea
        </p>
        <div>
          Dummy Select
          <button
            type="button"
          >
            change workarea
          </button>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fbm1
            </p>
            beamo
          </div>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fbb1b
            </p>
            Beambox
          </div>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fbb1p
            </p>
            Beambox Pro
          </div>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fhexa1
            </p>
            HEXA
          </div>
        </div>
      </div>
      <strong>
        Add-ons
      </strong>
      <div
        class="row"
      >
        <div>
          Dummy Col
          <p>
            props: 
            {"span":12}
          </p>
          <div>
            Dummy FormItem
            <p>
              name: 
              rotary_mode
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                undefined
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
          <div>
            Dummy FormItem
            <p>
              name: 
              borderless_mode
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                false
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
        </div>
        <div>
          Dummy Col
          <p>
            props: 
            {"span":12}
          </p>
          <div>
            Dummy FormItem
            <p>
              name: 
              autofocus-module
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                false
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
          <div>
            Dummy FormItem
            <p>
              name: 
              diode_module
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                false
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      type="button"
    >
      Save
    </button>
    <button
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`test DocumentSettings should render correctly 4`] = `
<div>
  <div>
    Dummy Modal
    <p>
      title: 
      Document Settings
    </p>
    <div>
      Dummy Form
      <div>
        DummyEngraveDpiSlider
        <p>
          value: 
          high
        </p>
        <button
          type="button"
        >
          change dpi
        </button>
      </div>
      <div>
        Dummy FormItem
        <p>
          name: 
          workarea
        </p>
        <div>
          Dummy Select
          <button
            type="button"
          >
            change workarea
          </button>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fbm1
            </p>
            beamo
          </div>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fbb1b
            </p>
            Beambox
          </div>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fbb1p
            </p>
            Beambox Pro
          </div>
          <div>
            Dummy SelectOption
            <p>
              value: 
              fhexa1
            </p>
            HEXA
          </div>
        </div>
      </div>
      <strong>
        Add-ons
      </strong>
      <div
        class="row"
      >
        <div>
          Dummy Col
          <p>
            props: 
            {"span":12}
          </p>
          <div>
            Dummy FormItem
            <p>
              name: 
              rotary_mode
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                true
              </p>
              <p>
                disabled: 
                undefined
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
          <div>
            Dummy FormItem
            <p>
              name: 
              borderless_mode
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                false
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
        </div>
        <div>
          Dummy Col
          <p>
            props: 
            {"span":12}
          </p>
          <div>
            Dummy FormItem
            <p>
              name: 
              autofocus-module
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                false
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
          <div>
            Dummy FormItem
            <p>
              name: 
              diode_module
            </p>
            <div>
              Dummy Switch
              <p>
                checked: 
                false
              </p>
              <p>
                disabled: 
                false
              </p>
              <button
                type="button"
              >
                change
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      type="button"
    >
      Save
    </button>
    <button
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;
